opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/shell"
bug-reports: "https://github.com/janestreet/shell/issues"
dev-repo: "git+https://github.com/janestreet/shell.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core"
  "core_kernel"
  "ppx_jane"
  "re2"
  "textutils"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
  "spawn"                   {>= "v0.12"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Yet another implementation of fork&exec and related functionality

This library is a relatively featureful and flexible implementation of fork&exec with related functionality, including some basic support for asynchronous I/O. This is an old and unmaintained code. New users are advised to try using [Async.Process] for certain use cases and [Shexp_process] for certain other use cases.
"
