opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/shell"
bug-reports: "https://github.com/janestreet/shell/issues"
dev-repo: "git+https://github.com/janestreet/shell.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/shell/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "core"
  "core_unix"
  "jst-config"
  "ppx_jane"
  "textutils"
  "dune"       {>= "2.0.0"}
  "spawn"      {>= "v0.15"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Yet another implementation of fork&exec and related functionality"
description: "
This library is a relatively featureful and flexible implementation of fork&exec with related functionality, including some basic support for asynchronous I/O. This is an old and unmaintained code. New users are advised to try using [Async.Process] for certain use cases and [Shexp_process] for certain other use cases.
"
depexts: ["linux-headers"] {os-family = "alpine"}
