(library
 (foreign_stubs
  (language c)
  (names fork_exec unix_extended_stubs))
 (name unix_extended)
 (public_name shell.unix_extended)
 (libraries core core_unix shell_internal spawn core_unix.time_float_unix)
 (preprocessor_deps config.h)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} %{targets}")))
